<resources>
    <string name="app_name">NavigHeroesDota2</string>
    <string name="attack_type">Attack Type:</string>
    <string name="roles">Roles:</string>
    <string name="base_armor">Base Armor:</string>
    <string name="base_strength">Base Strength:</string>
    <string name="base_agility">Base Agility:</string>
    <string name="base_intellect">Base Intellect:</string>
    <string name="load_heroes">Load Heroes</string>
    <string name="https_github_com_artemshatokhin92">https://github.com/Artemshatokhin92</string>
    <string name="artem_shatokhin">Artem Shatokhin</string>
    <string name="_17_06_2022">17.06.2022</string>
    <string name="aboutapp">AboutApp</string>
</resources>